2005-04-22  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_forward2): Fixed a bug discovered by
	Jindrich Makovicka. The return value did not take into account
	the value of the `upto' parameter.
	* view.c (view_move_forward2): Added more assertions. Rewrote
	condition for breaking out of the loop when upto == 0.
	* view.c (display): Fixed operator precedence with ?: in hex
	display.
	* view.c (view_move_forward2): Fixed a bug related to the return
	value, which had made the down and page-down keys no-ops.

2005-04-19  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_file_load_data): Removed the requirement for
	ds_file_datasize to be a power of two.
	* view.c (struct WView): Renamed nib_shift to hexedit_lownibble.
	Replaced 0 literals with FALSE.
	* view.c (view_free_growing_buffer): Renamed to
	view_growbuf_free(). Simplified the code.
	* view.c (view_move_forward2): Early return if get_byte() returns
	-1.
	* view.c: Replaced const_cast with str_unconst.
	* view.c (display): Extracted the code for drawing the ruler into
	its own function, view_display_ruler(). Rewrote it.

2005-04-18  Roland Illig  <roland.illig@gmx.de>

	* view.c (struct WView): Moved the growing buffer variables
	between the data source and the display section.
	* view.c (save_edit_changes): Renamed to
	view_hexedit_save_changes().

2005-04-17  Roland Illig  <roland.illig@gmx.de>

	* view.c (save_edit_changes): Completely rewritten to be robust
	on errors. All changed bytes that could not be saved are kept
	in the change list, so that the user can try to save them later.
	* view.c (view_set_byte): Added for save_edit_changes().
	* view.c (display): view_place_cursor() is called after displaying
	in hex mode.
	* view.c (save_edit_changes): Changed return type to gboolean.
	* view.c (view_ok_to_quit): Changed return type to gboolean.
	Adjusted returned values.
	* view.c (view_load): Changed return type to gboolean. Adjusted
	returned values.